--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,6 +13,8 @@
 
     <div class="page-header text-center">
       <h1><span class="fa fa-anchor"></span> Profile Page</h1>
+      <a href="/" class="btn btn-default btn-sm">Back</a>
+      <a href="/#search" class="btn btn-default btn-sm">Message Board</a>
       <a href="/logout" class="btn btn-default btn-sm">Logout</a>
     </div>
 
@@ -40,16 +42,15 @@
 
         </div>
       </div>
-<div class="container">
+ <div class="container">
   <h1>Profile Photo Upload</h1>
   <%= typeof msg != 'undefined' ? msg : '' %>
-  <form action="/upload" method="POST" enctype="multipart/form-data">
-    <div class="form-group">
-      <label for="exampleFormControlFile1">Profile Photo:</label>
-      <input name="proPic" type="file" class="form-control-file" id="exampleFormControlFile1">
-    </div>
-    <button class="btn" type="submit" name="button">Save</button>
-  </form>
+  <!-- IMAGE UPLOAD -->
+  <i class="fa fa-picture-o"></i>
+<form action="/up" enctype="multipart/form-data" method="post">
+ <input type="file" name="file-to-upload">
+ <input type="submit" value="Upload">
+</form>
   <br>
   <img src="  <%= typeof file != 'undefined' ? file : '' %>" class="reponsive-img" alt="">
 </div>
@@ -57,58 +58,60 @@
 
 
       <div class="col-sm-6">
-        <h3>Messages</h3>
-        <ul class="messages">
-          <% for(var i=0; i<messages.length; i++) {%>
-            <li class="message">
-              <span><%= messages[i].email %></span>
-              <span><%= messages[i].name %></span>
-              <span><%= messages[i].location %></span>
-              <span><%= messages[i].story %></span>
-              <span><%= messages[i].gameplan %></span>
-              <span><%= messages[i].asks %></span>
-              <span><%= messages[i].size %></span>
-              <span><%= messages[i].updates %></span>
-              <span><%= messages[i].thumbUp %></span>
+        <h3>Public Messages</h3>
 
-              <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-            </li>
-            <% } %>
-        </ul>
-
-        <h2>Add a message</h2>
+        <h2>Add a message to the Message Boards</h2>
         <% if (user.local.email) { %>
           <form action="/messages" method="POST">
             <input type="text" value="<%= user.local.email %>" name="email">
             <input type="text" placeholder="Enter Name or Nickname" name="name">
             <input type="text" placeholder="location" name="location">
-
-            <textarea name="story" placeholder="Share Your Story Here & Include The Shelters You Visit Most, Where Items May Be Dropped Off For You" rows="8" cols="80"></textarea>
+            <textarea name="shelterList" rows="8" cols="80" placeholder="Frequented Shelters, please use complete shelter name (where items on your list may be dropped off)"></textarea>
+            <textarea name="story" placeholder="Share Your Story Here" rows="8" cols="80"></textarea>
             <textarea name="gameplan" placeholder="Short Term Game Plan Here, e.g. make a resume, apply to jobs, mock interviews" rows="8" cols="80"></textarea>
             <label for="Asks">Choose Items For Asks:</label>
             <select id="asks" name="asks" multiple="7">
+              <option name="asks" value="Deoderant">Sox</option>
+              <option name="asks" value="Deoderant">Undergarments</option>
+
+              <option name="asks" value="Deoderant">Backpack</option>
               <option name="asks" value="Deoderant">Deoderant</option>
               <option name="asks" value="Razor">Razor</option>
               <option name="asks" value="Soap">Soap</option>
+              <option name="asks" value="Deoderant">Lotion</option>
+              <option name="asks" value="Deoderant">Hair Ties</option>
               <option name="asks" value="Shampoo">Shampoo</option>
+              <option name="asks" value="Deoderant">Conditioner</option>
+              <option name="asks" value="Deoderant">Floss</option>
+              <option name="asks" value="Deoderant">Toothbrush</option>
+              <option name="asks" value="Deoderant">Comb/Brush</option>
+
+              <option name="asks" value="Deoderant">T-Shirt</option>
+
               <option name="asks" value="Dress Shirt">Dress Shirt</option>
               <option name="asks" value="Dress Pants">Dress Pants</option>
               <option name="asks" value="Dress Shoes">Dress Shoes</option>
-
+              <option name="asks" value="Deoderant">Formal Dress</option>
+              <option name="asks" value="Deoderant">Formal Skirt</option>
+              <option name="asks" value="Deoderant">Prom Dress</option>
+              <option name="asks" value="Deoderant">Dress Tie</option>
+              <option name="asks" value="Deoderant">Gloves</option>
+              <option name="asks" value="Deoderant">Sweater</option>
+              <option name="asks" value="Deoderant">Winter Coat</option>
+              <option name="asks" value="Deoderant">Sleeping Bag</option>
           </select>
-            <textarea name="size" placeholder="Clothing Size: S, M, L, Xl, etc. and Shoe Size: 6 in women, or 10 in men" rows="8" cols="80"></textarea>
-            <textarea name="updates" placeholder="Share updates and progress here, such as: resume completed, scheduled an interview, got a job " rows="8" cols="80"></textarea>
-
-
+            <textarea name="size" placeholder="Clothing Size: S, M, L, Xl, Pant Size, Shoe Size, Men or Women's clothing(be specific)" rows="8" cols="80"></textarea>
+            <textarea name="updates" placeholder="Share updates and progress here, such as: resume completed, scheduled an interview, got a job, OR Thank Someone for an item! " rows="8" cols="80"></textarea>
             <button type="submit">Submit</button>
           </form>
       </div>
       <% } %>
 
+
     </div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js">
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js">
     </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.min.js">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.min.js"> -->
 
     </script>
     <script src="main.js"></script>
